<resources>
    <string name="app_name">OSCES</string>
    <string name="about_go_vote_app"><u>About Go Vote App</u></string>
    <string name="line1"><b>Go Vote</b>, online voting system is Android application used to securely conduct votes and elections. As a digital platform, they eliminate the need to cast your votes using paper or having to gather in person.</string>
    <string name="line2">Our System Make the use of Firebase as backend, for login, registration and for storage purpose which make our system highly secured and reliable.</string>
    <string name="line3">It also uses <b>Firebase ML kit</b> for <b>face detection</b> which allows us to vote, one person at a time.</string>
    <string name="line4">This application also verify <b>biometric with the help of finger print sensor.</b></string>
    <string name="create_account">Before register your vote, create an account.</string>
    <string name="create_accountt">Create your account first</string>
    <string name="individual_votes">Individual Votes</string>
    <string name="online_voting_made_easy">Online Student Council\nElection System</string>
    <string name="login">Login</string>
    <string name="your_name">YOUR NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="already_hav_account">Already have an account?</string>
    <string name="new_user">Do not have an account? Register first</string>
    <string name="click_here_to_vote_now">Click here to vote now</string>
    <string name="thanks_for_voting">Thanks for voting!</string>
    <string name="verify_id">Verify ID</string>
    <string name="confirm_your_vote">confirm your vote</string>
    <string name="confirm">Confirm</string>
    <string name="your_id_number_will_not_disclose_its_just_for_verification_purpose">Your ID number will not disclose, Its just for verification purpose.</string>
    <string name="place_face">Place your face in middle of screen and then click on button and hold for a second</string>
    <string name="detect_face">Detect Face</string>
    <string name="vote_now">Vote Now</string>
    <string name="face_detect">Face Detection</string>
    <string name="parties">Candidates</string>
    <string name="logout">LOG OUT</string>
    <string name="admin">Admin Deshboard</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="forgotPass">Forget Password</string>
    <string name="uploadPrty">Upload Party</string>
    <string name="participate">Now you can participate in the election easily!</string>
    <string name="login_txt">Hi, Welcome back!</string>
    <string name="register">Register</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="indivote">Individual vote</string>
    <string name="elestartt">Election time</string>
    <string name="candreg">Candidate time</string>
    <string name="adminselect">Admin can control the timings of candidate registration and election</string>
</resources>
