<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/osces"
            android:scaleType="centerCrop"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneentryy"
            android:layout_below="@+id/h5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">

            <EditText
                android:id="@+id/loginphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/productsans_regular"
                android:letterSpacing="0.06"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordentryy"
            android:layout_below="@+id/phoneentryy"
            android:textColorHint="@color/gray"
            app:passwordToggleDrawable="@drawable/pass_icon_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">


            <EditText
                android:id="@+id/loginpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneentryy"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/productsans_regular"
                android:letterSpacing="0.06"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordentryy"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button1_ripple"
            android:fontFamily="@font/productsans_bold"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:letterSpacing="0.06"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/NewuserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/Newuser"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/productsans_regular"
            android:text="@string/new_user"
            android:letterSpacing="0.07"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Newuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button2_ripple"
            android:fontFamily="@font/productsans_bold"
            android:padding="15dp"
            android:text="@string/register"
            android:letterSpacing="0.06"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/h5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo1"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/productsans_bold"
            android:text="@string/login_txt"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:letterSpacing="0.06"
            android:textAllCaps="true" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>