<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.welcomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/osces" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="95dp"
            android:layout_above="@+id/register"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="149dp"
            android:fontFamily="@font/productsans_regular"
            android:letterSpacing="0.2"
            android:text="@string/participate"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/orange2"
            android:textSize="15sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register2"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button1_ripple"
            android:fontFamily="@font/productsans_bold"
            android:letterSpacing="0.06"
            android:padding="15dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button1_ripple"
            android:fontFamily="@font/productsans_bold"
            android:letterSpacing="0.06"
            android:padding="15dp"
            android:text="CANDIDATE REGISTER"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button2_ripple"
            android:fontFamily="@font/productsans_bold"
            android:letterSpacing="0.06"
            android:padding="15dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>